add nav and instro

--- a/src/index.html
+++ b/src/index.html
@@ -37,24 +37,155 @@
 
         <link rel="stylesheet" href="css/flaticon.css" />
         <link rel="stylesheet" href="css/icomoon.css" />
-        <link rel="stylesheet" href="scss/style.scss">
+        <link rel="stylesheet" href="scss/style.scss" />
     </head>
     <body>
-        <h1>Microphone Check</h1>
+        <nav
+            class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light"
+            id="ftco-navbar"
+        >
+            <div class="container">
+                <a class="navbar-brand" href="#">Daewon Song</a>
+                <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-toggle="collapse"
+                    data-target="#ftco-nav"
+                    aria-controls="ftco-nav"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+                >
+                    <span class="oi oi-menu"></span> Menu
+                </button>
 
-        <script src="js/jquery.min.js"></script>
-        <script src="js/jquery-migrate-3.0.1.min.js"></script>
-        <script src="js/popper.min.js"></script>
+                <div class="collapse navbar-collapse" id="ftco-nav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Work</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- END nav -->
+
+        <section id="home-section" class="hero">
+            <h1 class="vr text-center">DAEWON</h1>
+            <div class="js-fullheight home-wrap d-flex">
+                <div class="half order-md-last"></div>
+                <div class="half">
+                    <div class="home-slider owl-carousel">
+                        <div class="slider-item js-fullheight">
+                            <div class="overlay"></div>
+                            <div class="container-fluid p-0">
+                                <div
+                                    class="row d-md-flex no-gutters slider-text js-fullheight align-items-center justify-content-end"
+                                    data-scrollax-parent="true"
+                                >
+                                    <div
+                                        class="one-third img js-fullheight"
+                                        style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(images/bg-1.jpeg); filter: grayscale(1);"
+                                    ></div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="slider-item js-fullheight">
+                            <div class="overlay"></div>
+                            <div class="container-fluid p-0">
+                                <div
+                                    class="row d-flex no-gutters slider-text js-fullheight align-items-center justify-content-end"
+                                    data-scrollax-parent="true"
+                                >
+                                    <div
+                                        class="one-third img js-fullheight"
+                                        style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(images/bg-2.jpg); filter: grayscale(1);"
+                                    >
+                                        <div class="overlay"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="ftco-section ftco-intro">
+            <div class="container">
+                <div class="row justify-content-end">
+                    <div class="col-md-8">
+                        <h2>
+                            The Korean-American <span>Skateboarder</span> who
+                            became known for his technical street
+                            prowess...<span>Daewon</span>
+                        </h2>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing
+                            elit. Culpa praesentium minima officia saepe
+                            architecto tenetur, iusto officiis recusandae sed
+                            incidunt?
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+            integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+            crossorigin="anonymous"
+        ></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.3.2/jquery-migrate.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.6.0/umd/popper.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
-        <script src="js/jquery.easing.1.3.js"></script>
-        <script src="js/jquery.waypoints.min.js"></script>
-        <script src="js/jquery.stellar.min.js"></script>
-        <script src="js/owl.carousel.min.js"></script>
-        <script src="js/jquery.magnific-popup.min.js"></script>
-        <script src="js/aos.js"></script>
-        <script src="js/jquery.animateNumber.min.js"></script>
-        <script src="js/scrollax.min.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-        <script src="js/google-map.js"></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"
+            integrity="sha512-0QbL0ph8Tc8g5bLhfVzSqxe9GERORsKhIn1IrpxDAgUsbBGz/V7iSav2zzW325XGd1OMLdL4UiqRJj702IeqnQ=="
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://pagecdn.io/lib/waypoints/4.0.1/jquery.waypoints.min.js"
+            crossorigin="anonymous"
+            integrity="sha256-jDnOKIOq2KNsQZTcBTEnsp76FnfMEttF6AV2DF2fFNE="
+        ></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/stellar.js/0.6.2/jquery.stellar.min.js"
+            integrity="sha512-PNXCBnFH9wShbV+mYnrfo0Gf3iSREgBWmYAoMIfc+Z83vVq3Nu4yxBk6j+BZ40ZIhtW3WlTQdBvW3AYLAnlgpA=="
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+            integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"
+            integrity="sha512-IsNh5E3eYy3tr/JiX2Yx4vsCujtkhwl7SLqgnwLNgf04Hrt9BT9SXlLlZlWx+OK4ndzAoALhsMNcCmkggjZB1w=="
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"
+            integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw=="
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/jquery-animateNumber/0.0.14/jquery.animateNumber.min.js"
+            integrity="sha512-WY7Piz2TwYjkLlgxw9DONwf5ixUOBnL3Go+FSdqRxhKlOqx9F+ee/JsablX84YBPLQzUPJsZvV88s8YOJ4S/UA=="
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/scrollax@1.0.0/scrollax.min.js"
+            integrity="sha256-78XlHuE+x1oE3jMGeHoIsRro1NJVjN6q/nzTNyD/y9o="
+            crossorigin="anonymous"
+        ></script>
+
+        <script src="js/main.js"></script>
     </body>
 </html>
