about bio intro

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
                             <a href="#" class="nav-link">About</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Work</a>
+                            <a href="#" class="nav-link">Photos</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Contact</a>
@@ -127,10 +127,11 @@
                             prowess...<span>Daewon</span>
                         </h2>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing
-                            elit. Culpa praesentium minima officia saepe
-                            architecto tenetur, iusto officiis recusandae sed
-                            incidunt?
+                            As a pro in his 40s, he’s taken his ability to do
+                            pretty much anything he wants on a skateboard to
+                            social media, resulting in over a million followers
+                            and all the weirdly technical shit you’d expect for
+                            one of the most gifted to ever do it.
                         </p>
                     </div>
                 </div>
