--- a/src/index.html
+++ b/src/index.html
@@ -138,6 +138,65 @@
             </div>
         </section>
 
+        <section class="stats-section py-5 py-md-0">
+            <div class="container">
+                <div class="row no-gutters d-flex">
+                    <div
+                        class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate"
+                    >
+                        <div class="media block-6 stats d-block">
+                            <div class="icon">
+                                <span class="icon-instagram"></span>
+                            </div>
+                            <div class="media-body">
+                                <h3 class="heading mb-3">Insta</h3>
+                                <p>@daewon1song</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div
+                        class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate"
+                    >
+                        <div class="media block-6 stats active d-block">
+                            <div class="icon">
+                                <span class="icon-male"></span>
+                            </div>
+                            <div class="media-body">
+                                <h3 class="heading mb-3">Age, Gender</h3>
+                                <p>45, Male</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div
+                        class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate"
+                    >
+                        <div class="media block-6 stats d-block">
+                            <div class="icon">
+                                <span class="ion-ios-walk"></span>
+                            </div>
+                            <div class="media-body">
+                                <h3 class="heading mb-3">Stance</h3>
+                                <p>Goofy</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div
+                        class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate"
+                    >
+                        <div class="media block-6 stats active-2 d-block">
+                            <div class="icon">
+                                <span class="ion-ios-trophy"></span>
+                            </div>
+                            <div class="media-body">
+                                <h3 class="heading mb-3">Global Rank</h3>
+                                <p>Unranked</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
             integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
