--- a/src/index.html
+++ b/src/index.html
@@ -197,6 +197,18 @@
             </div>
         </section>
 
+        <section class="ftco-section ftco-portfolio">
+            <div class="container-fluid">
+                <div class="row justify-content-center pb-3">
+                    <div
+                        class="col-md-12 mb-5 heading-section text-center ftco-animate"
+                    >
+                        <h2 class="mb-5">News &amp; <span>Photos</span></h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
             integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
