--- a/src/index.html
+++ b/src/index.html
@@ -146,7 +146,7 @@
                     >
                         <div class="media block-6 stats d-block">
                             <div class="icon">
-                                <span class="icon-instagram"></span>
+                                <span class="ion-logo-instagram"></span>
                             </div>
                             <div class="media-body">
                                 <h3 class="heading mb-3">Insta</h3>
@@ -204,6 +204,53 @@
                         class="col-md-12 mb-5 heading-section text-center ftco-animate"
                     >
                         <h2 class="mb-5">News &amp; <span>Photos</span></h2>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="row no-gutters">
+                    <div class="col-md-12 portfolio-wrap">
+                        <div class="row no-gutters align-items-center">
+                            <div
+                                class="col-md-5 img js-fullheight"
+                                style="background-image: url(images/photos-1.jpg);"
+                            ></div>
+                            <div class="col-md-7">
+                                <div
+                                    class="text pt-5 pl-0 pl-lg-5 pl-md-4 ftco-animate"
+                                >
+                                    <div class="px-4 px-lg-4">
+                                        <div class="desc">
+                                            <div class="top">
+                                                <span class="subheading"
+                                                    >Houten Skate Park
+                                                    {12/06/2019}</span
+                                                >
+                                                <h2 class="mb-4">
+                                                    <a href="#">Kill or Be Killed</a>
+                                                </h2>
+                                            </div>
+                                            <div class="absolute">
+                                                <p>
+                                                    Far far away, behind the
+                                                    rocky mountains, is a small
+                                                    skate park that hosted a BBQ
+                                                    and Pro/Am contest.
+                                                </p>
+                                                <p>
+                                                    <a
+                                                        href="#"
+                                                        class="custom-btn"
+                                                        >Read More</a
+                                                    >
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
