--- a/src/index.html
+++ b/src/index.html
@@ -61,13 +61,13 @@
                 <div class="collapse navbar-collapse" id="ftco-nav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a href="#" class="nav-link">About</a>
+                            <a href="#intro" class="nav-link">About</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Photos</a>
+                            <a href="#photos" class="nav-link">Photos</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Contact</a>
+                            <a href="#contact" class="nav-link">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -90,7 +90,7 @@
                                 >
                                     <div
                                         class="one-third img js-fullheight"
-                                        style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(images/bg-1.jpeg); filter: grayscale(1);"
+                                        style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/bg-1.jpeg'); filter: grayscale(1);"
                                     ></div>
                                 </div>
                             </div>
@@ -105,7 +105,7 @@
                                 >
                                     <div
                                         class="one-third img js-fullheight"
-                                        style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(images/bg-2.jpg); filter: grayscale(1);"
+                                        style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/bg-2.jpg'); filter: grayscale(1);"
                                     >
                                         <div class="overlay"></div>
                                     </div>
@@ -117,7 +117,7 @@
             </div>
         </section>
 
-        <section class="ftco-section ftco-intro">
+        <section id="intro" class="ftco-section ftco-intro">
             <div class="container">
                 <div class="row justify-content-end">
                     <div class="col-md-8">
@@ -197,7 +197,7 @@
             </div>
         </section>
 
-        <section class="ftco-section ftco-portfolio">
+        <section id="photos" class="ftco-section ftco-portfolio">
             <div class="container-fluid">
                 <div class="row justify-content-center pb-3">
                     <div
@@ -214,7 +214,7 @@
                         <div class="row no-gutters align-items-center">
                             <div
                                 class="col-md-5 img js-fullheight"
-                                style="background-image: url(images/photos-1.jpg);"
+                                style="background-image: url('images/photos-1.jpg');"
                             ></div>
                             <div class="col-md-7">
                                 <div
@@ -228,26 +228,70 @@
                                                     {12/06/2019}</span
                                                 >
                                                 <h2 class="mb-4">
-                                                    <a href="#">Kill or Be Killed</a>
+                                                    <a>Humble Vibes</a>
                                                 </h2>
                                             </div>
                                             <div class="absolute">
                                                 <p>
-                                                    Far far away, behind the
-                                                    rocky mountains, is a small
-                                                    skate park that hosted a BBQ
-                                                    and Pro/Am contest.
+                                                    "What’s great about Daewon
+                                                    is that regardless of how
+                                                    talented he is and how long
+                                                    he's been a pro, he speaks
+                                                    to you as an equal. He
+                                                    speaks to you like any
+                                                    person at a spot who loves
+                                                    skating."
                                                 </p>
                                                 <p>
-                                                    <a
-                                                        href="#"
-                                                        class="custom-btn"
+                                                    <a class="custom-btn"
                                                         >Read More</a
                                                     >
                                                 </p>
                                             </div>
                                         </div>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container-fluid px-0 portfolio-entry">
+                <div
+                    class="row no-gutters d-xl-flex justify-content-end text-wrapper"
+                >
+                    <div
+                        class="one-half img js-fullheight"
+                        style="background-image: url('images/photos-2.jpg');"
+                    ></div>
+                    <div
+                        class="one-half half-text d-flex justify-content-end align-items-center ftco-animate"
+                    >
+                        <div class="text align-items-center d-flex">
+                            <div
+                                class="desc pt-5 pl-4 pr-4 pt-lg-0 pl-lg-5 pl-xl-0 pr-xl-0"
+                            >
+                                <div class="top">
+                                    <span class="subheading"
+                                        >News {12/06/2019}</span
+                                    >
+                                    <h2 class="mb-4">
+                                        <a>New Shoe &amp; Board Release</a>
+                                    </h2>
+                                </div>
+                                <div class="absolute">
+                                    <p>
+                                        It’s cool to see the different vibes at
+                                        shops. It's fun just watching and being
+                                        around that. Pretty wild. I don't know
+                                        how to explain it. It was amazing
+                                        interacting with the kids and actually
+                                        showing up and supporting the shops.
+                                    </p>
+                                    <p>
+                                        <a class="custom-btn">View Shop</a>
+                                    </p>
                                 </div>
                             </div>
                         </div>
