--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,8 @@
                     aria-expanded="false"
                     aria-label="Toggle navigation"
                 >
-                    <span class="oi oi-menu"></span> Menu
+                    <span class="oi oi-menu"></span>
+                    Menu
                 </button>
 
                 <div class="collapse navbar-collapse" id="ftco-nav">
@@ -122,9 +123,10 @@
                 <div class="row justify-content-end">
                     <div class="col-md-8">
                         <h2>
-                            The Korean-American <span>Skateboarder</span> who
-                            became known for his technical street
-                            prowess...<span>Daewon</span>
+                            Day in a Life with
+                            <span>Daewon Song</span>
+                            , the Skater Known as the
+                            <span>Street King</span>
                         </h2>
                         <p>
                             As a pro in his 40s, he’s taken his ability to do
@@ -203,7 +205,10 @@
                     <div
                         class="col-md-12 mb-5 heading-section text-center ftco-animate"
                     >
-                        <h2 class="mb-5">News &amp; <span>Photos</span></h2>
+                        <h2 class="mb-5">
+                            News &amp;
+                            <span>Photos</span>
+                        </h2>
                     </div>
                 </div>
             </div>
@@ -223,10 +228,10 @@
                                     <div class="px-4 px-lg-4">
                                         <div class="desc">
                                             <div class="top">
-                                                <span class="subheading"
-                                                    >Houten Skate Park
-                                                    {12/06/2019}</span
-                                                >
+                                                <span class="subheading">
+                                                    Houten Skate Park
+                                                    {12/06/2019}
+                                                </span>
                                                 <h2 class="mb-4">
                                                     <a>Humble Vibes</a>
                                                 </h2>
@@ -243,9 +248,9 @@
                                                     skating."
                                                 </p>
                                                 <p>
-                                                    <a class="custom-btn"
-                                                        >Read More</a
-                                                    >
+                                                    <a class="custom-btn">
+                                                        Read on
+                                                    </a>
                                                 </p>
                                             </div>
                                         </div>
@@ -273,25 +278,116 @@
                                 class="desc pt-5 pl-4 pr-4 pt-lg-0 pl-lg-5 pl-xl-0 pr-xl-0"
                             >
                                 <div class="top">
-                                    <span class="subheading"
-                                        >News {12/06/2019}</span
-                                    >
+                                    <span class="subheading">
+                                        New Threads {12/06/2019}
+                                    </span>
                                     <h2 class="mb-4">
                                         <a>New Shoe &amp; Board Release</a>
                                     </h2>
                                 </div>
                                 <div class="absolute">
                                     <p>
-                                        It’s cool to see the different vibes at
+                                        "It’s cool to see the different vibes at
                                         shops. It's fun just watching and being
                                         around that. Pretty wild. I don't know
                                         how to explain it. It was amazing
                                         interacting with the kids and actually
-                                        showing up and supporting the shops.
+                                        showing up and supporting the shops."
                                     </p>
                                     <p>
                                         <a class="custom-btn">View Shop</a>
                                     </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div id="music" class="container-fluid px-0 portfolio-entry">
+                <div
+                    class="row no-gutters d-md-flex justify-content-start text-wrapper"
+                >
+                    <div
+                        class="one-half img js-fullheight"
+                        style="background-image: url('images/photos-3.jpg');"
+                    ></div>
+                    <div
+                        class="one-half half-text d-flex justify-content-end align-items-center ftco-animate"
+                    >
+                        <div class="text-2 align-items-start d-flex">
+                            <div
+                                class="desc pt-5 pr-4 pl-4 pt-lg-0 pr-lg-5 pr-xl-0 pl-xl-0"
+                            >
+                                <div class="top">
+                                    <span class="subheading">
+                                        Music {12/06/2019}
+                                    </span>
+                                    <h2 class="mb-4">
+                                        <a>
+                                            What are you listening to at the
+                                            minute?
+                                        </a>
+                                    </h2>
+                                </div>
+                                <div class="absolute">
+                                    <p>
+                                        "I’ve been listening to a lot of old
+                                        Souls of Mischief and De La Soul – and I
+                                        like Little Hurricanes.""
+                                    </p>
+                                    <p>
+                                        <a class="custom-btn">
+                                            View Playlist
+                                        </a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="row no-gutters">
+                    <div class="col-md-12 portfolio-wrap">
+                        <div class="row no-gutters align-items-center">
+                            <div
+                                class="col-md-5 order-md-last img js-fullheight"
+                                style="background-image: url('images/photos-4.jpg');"
+                            ></div>
+                            <div class="col-md-7">
+                                <div class="text pt-5 pr-md-5 ftco-animate">
+                                    <div class="px-4 px-lg-4">
+                                        <div class="desc">
+                                            <div class="top">
+                                                <span class="subheading">
+                                                    Community {12/06/2019}
+                                                </span>
+                                                <h2 class="mb-4">
+                                                    <a>East Coast</a>
+                                                </h2>
+                                            </div>
+                                            <div class="absolute">
+                                                <p>
+                                                    "I remember seeing Jahmal
+                                                    Williams in a Molotov ad and
+                                                    knew he was from Boston.
+                                                    When I first started
+                                                    traveling to skate in
+                                                    Boston, it was Jamal
+                                                    Williams and Robbie
+                                                    Gangemi—they were like my
+                                                    age but they were so sick."
+                                                </p>
+                                                <p>
+                                                    <a class="custom-btn">
+                                                        Read on
+                                                    </a>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
