--- a/src/index.html
+++ b/src/index.html
@@ -396,6 +396,132 @@
             </div>
         </section>
 
+        <footer id="contact" class="ftco-footer ftco-section">
+            <div class="container">
+                <div class="row mb-5">
+                    <div class="col-md">
+                        <div class="ftco-footer-widget mb-4">
+                            <h2 class="ftco-heading-2">Last Thoughts</h2>
+                            <p>
+                                "I skate so much that the days I don’t, I love
+                                hanging with my son and just doing things to
+                                relax. Fish every once in a while, editing is
+                                fun and just hanging with your homies and having
+                                a nice cold one!""
+                            </p>
+                            <ul
+                                class="ftco-footer-social list-unstyled float-md-left float-lft mt-5"
+                            >
+                                <li class="ftco-animate">
+                                    <a href="#">
+                                        <span class="icon-twitter"></span>
+                                    </a>
+                                </li>
+                                <li class="ftco-animate">
+                                    <a href="#">
+                                        <span class="icon-facebook"></span>
+                                    </a>
+                                </li>
+                                <li class="ftco-animate">
+                                    <a href="#">
+                                        <span class="icon-instagram"></span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md">
+                        <div class="ftco-footer-widget mb-4 ml-md-5">
+                            <h2 class="ftco-heading-2">Bio</h2>
+                            <ul class="list-unstyled">
+                                <li>
+                                    <a href="#" class="py-2 d-block">
+                                        Portfolio
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="py-2 d-block">Privacy</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="py-2 d-block">
+                                        Terms Condition
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md">
+                        <div class="ftco-footer-widget mb-4">
+                            <h2 class="ftco-heading-2">Links</h2>
+                            <ul class="list-unstyled">
+                                <li>
+                                    <a
+                                        href="#home-section"
+                                        class="py-2 d-block"
+                                    >
+                                        Home
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#intro" class="py-2 d-block">
+                                        About
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#photos" class="py-2 d-block">
+                                        Photos
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#contact" class="py-2 d-block">
+                                        Contact
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md">
+                        <div class="ftco-footer-widget mb-4">
+                            <h2 class="ftco-heading-2">Have a Question?</h2>
+                            <div class="block-23 mb-3">
+                                <ul>
+                                    <li>
+                                        <span
+                                            class="icon icon-map-marker"
+                                        ></span>
+                                        <span class="text">
+                                            203 W. Crenshaw Los Angeles,
+                                            California, USA
+                                        </span>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <span
+                                                class="icon icon-phone"
+                                            ></span>
+                                            <span class="text">
+                                                +1 310 872 6851
+                                            </span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <span
+                                                class="icon icon-envelope"
+                                            ></span>
+                                            <span class="text">
+                                                ryansantos86@gmail.com
+                                            </span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
             integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
